{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 111,
  "lineage": "1c988043-572b-60ef-daa0-4907cc5c4df5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "timescalert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:route-table/rtb-0e33767eb459104a0",
            "associations": [],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "timescalert-staging"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0e33767eb459104a0",
            "owner_id": "891377142936",
            "route_table_id": "rtb-0e33767eb459104a0",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.162.6.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0681064c35feff4c5",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e22dbc22c49319f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "timescalert-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:security-group/sg-07c400b86ca274567",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "sg-07c400b86ca274567",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "lambda_production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-030c92a2675c3161a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 249,
            "cidr_block": "10.162.22.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sn-inet-lambda-1-staging"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0607bfb6d374f4584"
                ]
              }
            ],
            "id": "subnet-030c92a2675c3161a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sn-inet-lambda-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "sn_ngw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-09289207657a39711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 10,
            "cidr_block": "10.162.16.240/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sn-ngw-1-staging"
                ]
              }
            ],
            "id": "subnet-09289207657a39711",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sn-ngw-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:vpc/vpc-0607bfb6d374f4584",
            "cidr_block": "10.162.16.0/20",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0503bdd5b9adf8143",
                "cidr_block": "10.162.16.0/20",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e99ce589170625cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "extraction-staging"
                ]
              }
            ],
            "id": "vpc-0607bfb6d374f4584",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e91a95145e6d9c0a",
            "owner_id": "891377142936",
            "tags": {
              "Name": "extraction-staging"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aa559d0131dd11e",
            "arn": "arn:aws:ec2:us-east-1:891377142936:elastic-ip/eipalloc-02aa559d0131dd11e",
            "association_id": "eipassoc-06560671a84661dab",
            "domain": "vpc",
            "id": "eipalloc-02aa559d0131dd11e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023142858d7b59da2",
            "private_dns": "ip-10-162-16-250.ec2.internal",
            "private_ip": "10.162.16.250",
            "public_dns": "ec2-13-217-234-30.compute-1.amazonaws.com",
            "public_ip": "13.217.234.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1-staging"
            },
            "tags_all": {
              "Name": "nat-eip-1-staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087788f9d148427f0",
            "arn": "arn:aws:ec2:us-east-1:891377142936:elastic-ip/eipalloc-087788f9d148427f0",
            "association_id": "eipassoc-063b9ec9c004e1903",
            "domain": "vpc",
            "id": "eipalloc-087788f9d148427f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e47884f3bccefab",
            "private_dns": "ip-10-162-24-252.ec2.internal",
            "private_ip": "10.162.24.252",
            "public_dns": "ec2-34-238-48-9.compute-1.amazonaws.com",
            "public_ip": "34.238.48.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2-staging"
            },
            "tags_all": {
              "Name": "nat-eip-2-staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "data_extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072e42fd77921edac",
            "arn": "arn:aws:ec2:us-east-1:891377142936:instance/i-05d32c44b21d84022",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d32c44b21d84022",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "generated-key-staging",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ddeb6ec52441e9e",
            "private_dns": "ip-10-162-22-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.162.22.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-042cac25ec2b11c77",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030c92a2675c3161a",
            "tags": {
              "Name": "data-extraction-staging"
            },
            "tags_all": {
              "Name": "data-extraction-staging"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c400b86ca274567"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated",
            "data.aws_ami.amazon_linux",
            "data.aws_security_group.default",
            "data.aws_subnet.lambda_production",
            "data.aws_vpc.extraction",
            "tls_private_key.generated_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "extraction_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:internet-gateway/igw-0ab816b297b8ef0e2",
            "id": "igw-0ab816b297b8ef0e2",
            "owner_id": "891377142936",
            "tags": {
              "Name": "extraction-igw-staging"
            },
            "tags_all": {
              "Name": "extraction-igw-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-tgw-core-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:subnet/subnet-082c6409208a391e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.162.16.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c6409208a391e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377142936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-tgw-core-1-staging"
            },
            "tags_all": {
              "Name": "sn-tgw-core-1-staging"
            },
            "vpc_id": "vpc-0607bfb6d374f4584"
          },
          "dependencies": [
            "aws_vpc.extraction"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "extraction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377142936:vpc/vpc-0607bfb6d374f4584",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.16.0/20",
            "default_network_acl_id": "acl-05b36584fcda05688",
            "default_route_table_id": "rtb-0e91a95145e6d9c0a",
            "default_security_group_id": "sg-07c400b86ca274567",
            "dhcp_options_id": "dopt-0e99ce589170625cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0607bfb6d374f4584",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e91a95145e6d9c0a",
            "owner_id": "891377142936",
            "tags": {
              "Name": "extraction-staging"
            },
            "tags_all": {
              "Name": "extraction-staging"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}